fix: remove whitespace under images

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -657,7 +657,8 @@ img {
   padding: 0;
   margin: var(--space-xs);
   min-width: 0;
-  min-height: 120px;
+  min-height: 160px;
+  max-height: 160px;
   max-width: 100%;
   cursor: pointer;
   transition: box-shadow 0.2s, transform 0.2s;
@@ -671,7 +672,7 @@ img {
 .event-img-container {
   flex: 0 0 25%;
   display: flex;
-  align-items: center;
+  align-items: stretch;
   justify-content: center;
   height: 100%;
   min-width: 100px;
